fix problem of migration symfony 6.2 to 6.0

--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=5b84215b2f188796ec3357f393c41bea
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://u256492878_main:@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://u256492878_mytontine:Blueseed141@127.0.0.1:3306/u256492878_mytontine?serverVersion=5.2.1&charset=utf8mb4"
 #DATABASE_URL="postgresql://main:main@127.0.0.1:5432/tontine?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
