--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "lexik/jwt-authentication-bundle": "^2.19",
     "nelmio/cors-bundle": "^2.3",
     "phpdocumentor/reflection-docblock": "^5.3",
+    "phpoffice/phpspreadsheet": "^1.29",
     "phpstan/phpdoc-parser": "^1.23",
     "symfony/apache-pack": "^1.0",
     "symfony/asset": "6.0.*",
