--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,16 +2,32 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+    role_hierarchy:
+        ROLE_OFFICE: ROLE_USER
+        ROLE_SECRETARY: [ ROLE_OFFICE ]
+        ROLE_ACCOUNT_MANAGER: [ ROLE_SECRETARY ]
+        ROLE_PRESIDENT: [ ROLE_ACCOUNT_MANAGER ]
+        ROLE_ADMIN: [ ROLE_ADMIN, ROLE_PRESIDENT ]
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\Member
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            logout:
+                path: api_logout
+            json_login:
+                username_path: username
+                check_path: /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
