--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,55 +1,70 @@
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
-    password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    role_hierarchy:
-        ROLE_OFFICE: ROLE_USER
-        ROLE_SECRETARY: [ ROLE_OFFICE ]
-        ROLE_ACCOUNT_MANAGER: [ ROLE_SECRETARY ]
-        ROLE_PRESIDENT: [ ROLE_ACCOUNT_MANAGER ]
-        ROLE_ADMIN: [ ROLE_ADMIN, ROLE_PRESIDENT ]
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
-    providers:
-        app_user_provider:
-            entity:
-                class: App\Entity\Member
-                property: username
-    firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
-            logout:
-                path: api_logout
-            json_login:
-                username_path: username
-                check_path: /api/login_check
-                success_handler: lexik_jwt_authentication.handler.authentication_success
-                failure_handler: lexik_jwt_authentication.handler.authentication_failure
-            lazy: true
-            provider: app_user_provider
+  # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+  password_hashers:
+    Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
+  # role_hierarchy:
+  #   ROLE_OFFICE: ROLE_USER
+  #   ROLE_SECRETARY: [ROLE_OFFICE]
+  #   ROLE_ACCOUNT_MANAGER: [ROLE_SECRETARY]
+  #   ROLE_PRESIDENT: [ROLE_ACCOUNT_MANAGER]
+  #   ROLE_ADMIN: [ROLE_ADMIN, ROLE_PRESIDENT]
+  # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+  providers:
+    # used to reload user from session & other features (e.g. switch_user)
+    app_user_provider:
+      entity:
+        class: App\Entity\Member
+        property: username
+  role_hierarchy:
+    ROLE_OFFICE: ROLE_USER
+    ROLE_SECRETARY: [ROLE_OFFICE]
+    ROLE_ACCOUNT_MANAGER: [ROLE_SECRETARY]
+    ROLE_PRESIDENT: [ROLE_ACCOUNT_MANAGER]
+    ROLE_ADMIN: [ROLE_ADMIN, ROLE_PRESIDENT]
+  firewalls:
+    login:
+      pattern: ^/api/login
+      stateless: true
+      provider: app_user_provider
+      json_login:
+        username_path: username
+        check_path: /api/login_check
+        success_handler: lexik_jwt_authentication.handler.authentication_success
+        failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
+    api:
+      pattern: ^/api
+      stateless: true
+      jwt: ~
+    dev:
+      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      security: false
+    main:
+      lazy: true
+      logout:
+        path: api_logout
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+      # activate different ways to authenticate
+      # https://symfony.com/doc/current/security.html#the-firewall
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+      # https://symfony.com/doc/current/security/impersonating_user.html
+      # switch_user: true
+
+  # Easy way to control access for large sections of your site
+  # Note: Only the *first* access control that matches will be used
+  access_control:
+    - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    # - { path: ^/v1/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
-    security:
-        password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+  security:
+    password_hashers:
+      # By default, password hashers are resource intensive and take time. This is
+      # important to generate secure password hashes. In tests however, secure hashes
+      # are not important, waste resources and increase test times. The following
+      # reduces the work factor to the lowest possible values.
+      Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
+        algorithm: auto
+        cost: 4 # Lowest possible value for bcrypt
+        time_cost: 3 # Lowest possible value for argon
+        memory_cost: 10 # Lowest possible value for argon
