--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Connect to Hostinger instance and deploy
         run: |
-          ssh -i ~/.ssh/id_rsa -p 65002  u256492878@149.100.151.80 << EOF
+          ssh -T -i ~/.ssh/id_rsa -p 65002 u256492878@149.100.151.80 << EOF
 
             # access to the directory of the project
             cd ~/public_html/tontine-api
