--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,12 @@ jobs:
         env:
           host: ${{ secrets.HOST  }}
           username: ${{ secrets.USERNAME }}
-          port: 65002
+          # port: ${{ secrets.PORT }}
           password: ${{ secrets.PASSWORD }}
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: $host
           username: $username
           password: $password
-          port: $port
+          port: 65002
           script: whoami
